# tauri-commands-api-poc

./: Cargo.toml
src/: app.rs  cmd.rs  main.rs
