[package]
name = "tauri-commands-api-poc"
version = "0.1.0"
authors = ["Parker McMullin <parker.mcmullin01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
